# controllers/cartasController.go
@@ -2,6 +2,7 @@ package controllers
 
 import (
 	"TheNexusBattlesII_Card_API_Reborn/functions"
+	"TheNexusBattlesII_Card_API_Reborn/models"
 	"net/http"
 
 	"github.com/labstack/echo/v4"
@@ -9,7 +10,7 @@ import (
 )
 
 // CartasGet godoc
-// @Router /cartas/getid/{id} [get]
+// @Router /cartas/{id} [get]
 // @Tags Cartas
 // @Summary trae un documento tipo Carta
 // @Description este método devuelve un documento tipo Carta por búsqueda de id
@@ -18,7 +19,7 @@ import (
 // @Success 200 {object} interface{} "Documento tipo Carta"
 // @Failure 400 {object} string "Id de búsqueda inválido"
 // @Failure 404 {object} string "Documento no existente en la base de datos"
-func GetObjectById(c echo.Context) error {
+func GetObject(c echo.Context) error {
 	//[1. Validar el id]
 	id := c.Param("id")
 	id_bson, err := primitive.ObjectIDFromHex(id)
@@ -27,8 +28,40 @@ func GetObjectById(c echo.Context) error {
 	}
 	//[2. Traer el documento]
 	document := make(map[string]interface{})
-	if err := functions.GetObjectById(id_bson, document); err != nil {
+	if err := functions.GetObject(id_bson, document); err != nil {
 		return c.JSON(http.StatusNotFound, map[string]string{"message:": "404: Document not found"})
 	}
 	return c.JSON(http.StatusOK, document)
+}
+
+// CartasListGet godoc
+// @Router /cartas/ [get]
+// @Tags Cartas
+// @Summary trae una lista de documentos tipo Carta
+// @Description este método devuelve una lista de documentos tipo Carta
+// @Param size query int true "Tamaño de la paginación"
+// @Param page query int true "Página de los documentos"
+// @Param keyword query string false "palabra clave para filtrar por nombre"
+// @Param coleccion query string true "Coleccion del documento"
+// @Accept json
+// @Produce json
+// @Success 200 {object} []map[string]interface{} "Lista de documentos tipo Carta"
+// @Failure 400 {object} string "Parámetros de paginación inválidos"
+// @Failure 500 {object} string "Error interno en el servidor"
+func GetObjectList(c echo.Context) error {
+	//[2. Validar paginación]
+	var pagination models.PaginationModel
+	pagination.StatusFilter = &[]bool{false}[0]
+	if err := c.Bind(&pagination); err != nil {
+		return c.JSON(http.StatusBadRequest, map[string]string{"message:": "Bad Request: Invalid parameters"})
+	}
+	if err := pagination.Validate(); err != nil {
+		return c.JSON(http.StatusBadRequest, map[string]string{"message:": "Bad Request: Invalid parameters"})
+	}
+	//[2. Traer los documentos]
+	list := make([]map[string]interface{}, 0)
+	if err := functions.GetObjectList(pagination, &list); err != nil {
+		return c.JSON(http.StatusInternalServerError, map[string]string{"message:": "Internal Server Error: Documents not found"})
+	}
+	return c.JSON(http.StatusOK, list)
 }
