# models/paginationModel.go
@@ -5,7 +5,8 @@ import "github.com/go-playground/validator/v10"
 type PaginationModel struct {
 	Size         int    `query:"size"         validate:"required,gt=0"`
 	Page         int    `query:"page"         validate:"required,gt=0"`
-	Coleccion    string `                     validate:"required,alpha,oneof=Heroes Armas Armaduras Items Épicas"`
+	Coleccion    string `query:"coleccion"    validate:"required,alpha,oneof=Heroes Armas Armaduras Items Épicas"`
+	Keyword      string `query:"keyword"`
 	StatusFilter *bool  `query:"statusFilter" validate:"required"`
 }
 
